--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>k33g/speculos @ GitHub</title>
+  <title>k33g/SpeculOOs @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -28,46 +28,90 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
+	<script src="https://raw.github.com/k33g/speculoos/master/speculoos.js"></script>
 </head>
 
 <body>
-  <a href="http://github.com/k33g/speculos"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/k33g/speculoos"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/k33g/speculos/zipball/master">
+      <a href="http://github.com/k33g/speculoos/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/k33g/speculos/tarball/master">
+      <a href="http://github.com/k33g/speculoos/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/k33g/speculos">speculos</a>
+    <h1><a href="http://github.com/k33g/speculoos">SpeculOOs</a>
       <span class="small">by <a href="http://github.com/k33g">k33g</a></span></h1>
 
     <div class="description">
       Simple Javascript Class notation, CoffeeScript compliant !
     </div>
 
-    <h2>Authors</h2>
-<p>Philippe Charriere (ph.charriere@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Philippe CHARRIERE (ph.charriere@gmail.com)<br/>      </p>
-
-
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/k33g/speculos/zipball/master">zip</a> or
-      <a href="http://github.com/k33g/speculos/tarball/master">tar</a> formats.
+      <a href="http://github.com/k33g/speculoos/zipball/master">zip</a> or
+      <a href="http://github.com/k33g/speculoos/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/k33g/speculos</pre>
+      <pre>$ git clone git://github.com/k33g/speculoos</pre>
     </p>
+	
+	<h2>Use</h2>
+	<p>
+		<pre>
+var Thing = Class({
+    constructor : function Thing (kind) {
+        this.kind = kind;
+    }
+})
 
+var Human = Class({
+    extends : Thing, /* inheritance */
+    constructor : function Human (name) {
+        this.name = name;
+        /* Call Parent constructor */
+        Human.__super__.constructor.call(this, "I AM A HUMAN");
+        Human.HumanCounter += 1;
+    },
+
+    toString : function() {
+        return "Hello " + this.name;
+    },
+    /* Static Members */
+    $HumanCounter : 0,
+    $getHumanCounter : function() { return Human.HumanCounter; }
+});
+		</pre>
+	</p>
+	
+	<h2>Use with Javascript</h2>
+	<p>
+		<pre>
+var bob = new Human('Bob');
+console.log(bob, bob.toString(), Human.getHumanCounter(), Human.HumanCounter);
+		</pre>
+	</p>	
+	
+	<h2>Use with Coffeescript</h2>
+	<p>
+		<pre>
+class SuperHeroe extends Human
+    constructor:(name)->
+        super name
+
+superMan = new SuperHeroe 'Clark Kent'
+
+console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
+		</pre>
+	</p>
+	
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/k33g/speculos">k33g/speculos</a>
+      get the source code on GitHub : <a href="http://github.com/k33g/speculoos">k33g/speculoos</a>
     </div>
 
   </div>
