--- a/index.html
+++ b/index.html
@@ -1,69 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
+  	<meta charset='utf-8'>
+  	<title>k33g/SpeculOOs @ GitHub</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/default.min.css">
 
-  <title>k33g/SpeculOOs @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #cabeb4;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #35414b; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #35414b; }
-    h3 { text-align: center; color: #35414b; }
-    a { color: #35414b; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
 	<script src="https://raw.github.com/k33g/speculoos/master/speculoos.js"></script>
+	<script src="js/zepto.min.js"></script>
+	<script src="js/highlight.min.js"></script>
 </head>
 
 <body>
   <a href="http://github.com/k33g/speculoos"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/k33g/speculoos/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/k33g/speculoos/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/k33g/speculoos">SpeculOOs</a>
-      <span class="small">by <a href="http://github.com/k33g">k33g</a></span></h1>
-
-    <div class="description">
-      Simple Javascript Class notation, CoffeeScript compliant !
-    </div>
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/k33g/speculoos/zipball/master">zip</a> or
-      <a href="http://github.com/k33g/speculoos/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/k33g/speculoos</pre>
-    </p>
+  <div class="container-fluid">
 	
-	<h2>Use</h2>
-	<p>
-		<pre>
+		<div class="content" style="padding-top:15px; padding-bottom:15px; ">
+			<div class="hero-unit">
+			    <div class="download">
+			      <a href="http://github.com/k33g/speculoos/zipball/master">
+			        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+			      <a href="http://github.com/k33g/speculoos/tarball/master">
+			        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+			    </div>
+
+			    <h1><a href="http://github.com/k33g/speculoos">SpeculOOs</a></h1>
+			    <h3><span class="small">by <a href="http://github.com/k33g">k33g</a></span></h3>
+				<h2>
+			      Simple Javascript Class notation, CoffeeScript compliant !
+			    </h2>
+			</div>
+			<!-- end of hero-unit -->
+			
+
+
+			    <h2>Download</h2>
+			    <p>
+			      You can download this project in either
+			      <a href="http://github.com/k33g/speculoos/zipball/master">zip</a> or
+			      <a href="http://github.com/k33g/speculoos/tarball/master">tar</a> formats.
+			    </p>
+			    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+			      by running:
+			      <pre>$ git clone git://github.com/k33g/speculoos</pre>
+			    </p>
+
+				<h2>Use</h2>
+				<p>
+					<pre><code>
 var Thing = Class({
     constructor : function Thing (kind) {
         this.kind = kind;
@@ -86,20 +71,20 @@ var Human = Class({
     $HumanCounter : 0,
     $getHumanCounter : function() { return Human.HumanCounter; }
 });
-		</pre>
-	</p>
-	
-	<h2>Use with Javascript</h2>
-	<p>
-		<pre>
+					</code></pre>
+				</p>
+
+				<h2>Use with Javascript</h2>
+				<p>
+					<pre><code>
 var bob = new Human('Bob');
 console.log(bob, bob.toString(), Human.getHumanCounter(), Human.HumanCounter);
-		</pre>
-	</p>	
-	
-	<h2>Use with Coffeescript</h2>
-	<p>
-		<pre>
+					</code></pre>
+				</p>	
+
+				<h2>Use with Coffeescript</h2>
+				<p>
+					<pre><code>
 class SuperHeroe extends Human
     constructor:(name)->
         super name
@@ -107,15 +92,22 @@ class SuperHeroe extends Human
 superMan = new SuperHeroe 'Clark Kent'
 
 console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
-		</pre>
-	</p>
-	
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/k33g/speculoos">k33g/speculoos</a>
-    </div>
+					</code></pre>
+				</p>
 
-  </div>
-
+			    <div class="footer">
+			      get the source code on GitHub : <a href="http://github.com/k33g/speculoos">k33g/speculoos</a>
+			    </div>
+		<div>
+		<!-- end of content -->
+	</div>
+	<!-- end of container fluid -->
   
 </body>
+<script>
+	$(document).ready(function() {
+		console.log("color");
+		$('pre code').each(function(i, e) {hljs.highlightBlock(e, '    ')});
+	});
+</script>
 </html>
