--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 var Thing = Class({
 	constructor : function Thing (kind) {
 		this.kind = kind;
+		// private variable with getter and setter
+		var _nickName = '???';
+		this.getNickName = function () { return _nickName; }
+		this.setNickName = function (nickName) { _nickName = nickName; }
 	},
 	sayHello : function() {
 		console.log("Hello !");
@@ -94,9 +98,10 @@ class SuperHeroe extends Human
 		super name
 	sayHello:->
 		super
-		console.log "And i'm a superheroe"
+		console.log "And i'm a superheroe : #{@getNickName()}"
 
 superMan = new SuperHeroe 'Clark Kent'
+superMan.setNickName "Super Man"
 
 console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
 superMan.sayHello()
@@ -127,6 +132,10 @@ superMan.sayHello()
 	var Thing = Class({
 		constructor : function Thing (kind) {
 			this.kind = kind;
+			/* private variable with getter and setter */
+			var _nickName = '???';
+			this.getNickName = function () { return _nickName; }
+			this.setNickName = function (nickName) { _nickName = nickName; }
 		},
 		
 		sayHello : function() {
@@ -171,9 +180,10 @@ superMan.sayHello()
 
 		sayHello:->
 			super
-			console.log "And i'm a superheroe"
+			console.log "And i'm a superheroe : #{@getNickName()}"
 
 	superMan = new SuperHeroe 'Clark Kent'
+	superMan.setNickName "Super Man"
 
 	console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
 	superMan.sayHello()
