rename "extends" by "Extends" (reserved word) + minified (463 bytes)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var Thing = Class({
 })
 
 var Human = Class({
-	extends : Thing, // inheritance 
+	Extends : Thing, // inheritance 
 	constructor : function Human (name) {
 		this.name = name;
 		// Call Parent constructor
@@ -157,7 +157,7 @@ superMan.sayHello()
 	})
 
 	var Human = Class({
-		extends : Thing, /* inheritance */
+		Extends : Thing, /* inheritance */
 		constructor : function Human (name) {
 			this.name = name;
 			/* Call Parent constructor */
