--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@ bob.sayHello();
 				<h2>Use with Coffeescript</h2>
 				<p>
 					<pre><code>
-class SuperHeroe extends Human
+class SuperHero extends Human
 	constructor:(name)->
 		super name
 	sayHello:->
 		super
-		console.log "And i'm a superheroe : #{@getNickName()}"
+		console.log "And i'm a superhero : #{@getNickName()}"
 
-superMan = new SuperHeroe 'Clark Kent'
+superMan = new SuperHero 'Clark Kent'
 superMan.setNickName "Super Man"
 
-console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
+console.log superMan, superMan.toString(), SuperHero.getHumanCounter(), Human.HumanCounter
 superMan.sayHello()
 					</code></pre>
 				</p>
@@ -187,18 +187,18 @@ superMan.sayHello()
 </script>
 <script type="text/coffeescript">
 	### this is coffeescript ###
-	class SuperHeroe extends Human
+	class SuperHero extends Human
 		constructor:(name)->
 			super name
 
 		sayHello:->
 			super
-			console.log "And i'm a superheroe : #{@getNickName()}"
+			console.log "And i'm a superhero : #{@getNickName()}"
 
-	superMan = new SuperHeroe 'Clark Kent'
+	superMan = new SuperHero 'Clark Kent'
 	superMan.setNickName "Super Man"
 
-	console.log superMan, superMan.toString(), SuperHeroe.getHumanCounter(), Human.HumanCounter
+	console.log superMan, superMan.toString(), SuperHero.getHumanCounter(), Human.HumanCounter
 	superMan.sayHello()
 </script>
 </html>
