--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 					<pre><code>
 /* this is javascript */
 var Thing = Class({
-	constructor : function Thing (kind) { /* you have to name the constructor */
+	//you have to name the constructor 
+	constructor : function Thing (kind) { 
 		this.kind = kind;
 		// private variable with getter and setter
 		var _nickName = '???';
