--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ var Thing = Class({
 })
 
 var Human = Class({
-	Extends : Thing, // inheritance 
+	extends : Thing, // inheritance 
 	constructor : function Human (name) {
 		this.name = name;
 		// Call Parent constructor
@@ -158,7 +158,7 @@ superMan.sayHello()
 	})
 
 	var Human = Class({
-		Extends : Thing, /* inheritance */
+		extends : Thing, /* inheritance */
 		constructor : function Human (name) {
 			this.name = name;
 			/* Call Parent constructor */
